--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Srinivasa Steel Corporation - Quality Steel in Tenali</title>
-    <meta name="description" content="Srinivasa Steel Corporation is a leading supplier of high-quality steel products in Tenali, Andhra Pradesh, offering TMT bars, structural steel, and more.">
-    <meta name="keywords" content="steel, srinivasa steel, steel corporation, tenali steel, andhra pradesh steel, TMT bars, structural steel">
+    <title>Srinivasa Steel Corporation - Quality Steel in Vijayawada</title>
+    <meta name="description" content="Srinivasa Steel Corporation is a leading supplier of high-quality steel products in Vijayawada, Andhra Pradesh, offering TMT bars, structural steel, and more.">
+    <meta name="keywords" content="steel, srinivasa steel, steel corporation, Vijayawada steel, andhra pradesh steel, TMT bars, structural steel">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,7 +54,7 @@
         <section class="hero-bg text-white">
             <div class="container mx-auto px-6 py-32 text-center">
                 <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">Strength in Steel, Trust in Service</h1>
-                <p class="text-lg md:text-xl text-gray-200 mb-8 max-w-3xl mx-auto">Your premier partner for high-quality steel solutions in Tenali and across Andhra Pradesh. We are committed to building a stronger future together.</p>
+                <p class="text-lg md:text-xl text-gray-200 mb-8 max-w-3xl mx-auto">Your premier partner for high-quality steel solutions in Vijayawada and across Andhra Pradesh. We are committed to building a stronger future together.</p>
                 <a href="#products" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-lg transition duration-300 text-lg">Explore Our Products</a>
             </div>
         </section>
@@ -73,7 +73,7 @@
                     </div>
                     <div class="md:w-1/2 text-lg">
                         <p class="text-gray-700 mb-4">
-                            Founded in the heart of Tenali, Andhra Pradesh, Srinivasa Steel Corporation has grown to become a cornerstone of the regional construction and industrial sectors. Our mission is to provide superior quality steel products that form the backbone of strong, safe, and lasting infrastructure.
+                            Founded in the heart of Vijayawada, Andhra Pradesh, Srinivasa Steel Corporation has grown to become a cornerstone of the regional construction and industrial sectors. Our mission is to provide superior quality steel products that form the backbone of strong, safe, and lasting infrastructure.
                         </p>
                         <p class="text-gray-700 mb-4">
                             We pride ourselves on our unwavering commitment to customer satisfaction, reliability, and integrity. By sourcing the best materials and employing rigorous quality control, we ensure every product that leaves our facility meets the highest industry standards.
@@ -137,17 +137,17 @@
                          <h3 class="text-2xl font-bold mb-4 text-blue-800">Our Location</h3>
                          <div class="mb-4 text-gray-700">
                              <p class="font-semibold">Srinivasa Steel Corporation</p>
-                             <p>Industrial Estate, Tenali,</p>
-                             <p>Guntur District, Andhra Pradesh, 522201</p>
+                             <p>Iron Yard, Vijayawada,</p>
+                             <p>Krishna District, Andhra Pradesh, 520003</p>
                              <p>India</p>
                          </div>
                          <div class="mb-6 text-gray-700">
-                            <p><span class="font-semibold">Phone:</span> <a href="tel:+910000000000" class="text-blue-600 hover:underline">+91-00000-00000</a></p>
-                            <p><span class="font-semibold">Email:</span> <a href="mailto:info@srinivasasteel.com" class="text-blue-600 hover:underline">info@srinivasasteel.com</a></p>
+                            <p><span class="font-semibold">Phone:</span> <a href="tel:+91 8333077601" class="text-blue-600 hover:underline">+91-00000-00000</a></p>
+                            <p><span class="font-semibold">Email:</span> <a href="mailto:saiakassaiakash203@gmail.com" class="text-blue-600 hover:underline">info@srinivasasteel.com</a></p>
                          </div>
                          <!-- Google Maps Embed -->
                          <div class="aspect-w-16 aspect-h-9 rounded-lg overflow-hidden">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30663.856976695847!2d80.6231904420166!3d16.248312066861617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a4a060e8727161b%3A0x8f3956383561a29!2sTenali%2C%20Andhra%20Pradesh!5e0!3m2!1sen!2sin!4v1663162232986!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-full h-full"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30663.856976695847!2d80.6231904420166!3d16.248312066861617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a4a060e8727161b%3A0x8f3956383561a29!2sVijayawada%2C%20Andhra%20Pradesh!5e0!3m2!1sen!2sin!4v1663162232986!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-full h-full"></iframe>
                          </div>
                     </div>
                     <!-- Contact Form -->
