--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <p><span class="font-semibold">Email:</span> <a href="mailto:saiakask203@gmail.com" class="text-blue-600 hover:underline">saiakash203@gmail.com</a></p>
                         </div>
                         <div class="aspect-w-16 aspect-h-9 rounded-lg overflow-hidden">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61205.0484640575!2d80.60368477461955!3d16.510160764031664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a35eff9482d944b%3A0x939b7e84ab4a0265!2sVijayawada%2C%20Andhra%20Pradesh!5e0!3m2!1sen!2sin!4v1757950085805!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-full h-full"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3824.712752660236!2d80.59172437472738!3d16.540593084209352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a35ef874c79334d%3A0x99f926256d63079d!2sSrinivasa%20Steel%20Corporation!5e0!3m2!1sen!2sin!4v1757953841605!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-full h-full"></iframe>
                         </div>
                     </div>
                     <div class="md:w-1/2 flex flex-col justify-center items-center">
