--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                         <h3 class="text-2xl font-bold mb-4 text-blue-800">Our Location</h3>
                         <div class="mb-4 text-gray-700">
                             <p class="font-semibold">Srinivasa Steel Corporation</p>
-                            <p>Iron Yard, Vijayawada,</p>
-                            <p>Krishna District, Andhra Pradesh, 520003</p>
+                            <p>Flat number 90, 1st Cross Rd, Bhavanipuram, Vijayawada </p>
+                            <p>Krishna District, Andhra Pradesh, 520012</p>
                             <p>India</p>
                         </div>
                         <div class="mb-6 text-gray-700">
